--- a/Production/assets/css/main.css
+++ b/Production/assets/css/main.css
@@ -64,6 +64,7 @@ body, html {
 
 p, a, h1 {
   -webkit-font-smoothing: antialiased;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 a {
@@ -78,8 +79,9 @@ a {
   text-align: center;
   background-image: url("../images/header-bg.png");
 }
-#header img {
+#header #logo {
   display: inline-block;
+  cursor: pointer;
 }
 
 #content {
@@ -181,6 +183,14 @@ a {
 #content #footer #social a.facebook {
   background-position: -25px 0px;
   margin-left: 5px;
+}
+#content #footer #social p {
+  font-size: 14px;
+  display: block;
+  float: left;
+  line-height: 25px;
+  color: #666666;
+  margin-right: 10px;
 }
 
 .table {
