--- a/Production/editor/assets/sass/main.sass
+++ b/Production/editor/assets/sass/main.sass
@@ -52,6 +52,8 @@ h1, h2, h3, h4, p, span, a
 
 // Living room
 #livingroom-solo
+	min-width: 300px
+	min-height: 200px
 	background-image: url("../roomplans/livingroom/solo.png")
 	background-size: 300px 200px
 	@include room
@@ -106,7 +108,6 @@ h1, h2, h3, h4, p, span, a
 		@include transition-duration(0.05s)
 		overflow: hidden
 		border: 2px solid #333333
-
 
 		img 
 			display: block
@@ -202,10 +203,10 @@ h1, h2, h3, h4, p, span, a
 	ul.sub-rooms
 		display: none
 		position: absolute
-		top: 66px
+		top: 58px
 		width: 100%
-		background-color: #333
 		z-index: 1
+		color: white
 
 		&.active
 			display: block
@@ -217,9 +218,19 @@ h1, h2, h3, h4, p, span, a
 			font-size: 12px
 			display: block
 			cursor: pointer
+			background-color: #2fa88e
+
+			&:first-child
+				background-image: url("../images/sub-rooms-arrow.png")
+				background-position: top center
+				background-repeat: no-repeat
+				background-color: transparent
+				height: 10px
+				display: block
+				width: 100%
 
 			&:hover 
-				background-color: #2fa88e
+				background-color: #36c3a4
 
 	.button
 		color: white
@@ -259,6 +270,14 @@ h1, h2, h3, h4, p, span, a
 		&.add-bedroom
 			span
 				background-position: -40px -40px
+
+		&.add-garage
+			span
+				background-position: 0px -120px
+
+		&.add-sauna
+			span
+				background-position: -40px -120px
 
 
 #wrapper
