--- a/Production/editor/assets/css/main.css
+++ b/Production/editor/assets/css/main.css
@@ -179,6 +179,16 @@ h1, h2, h3, h4, p, span, a {
   height: 175px;
   background-image: url("../roomplans/bedroom/small.png");
   background-size: 150px 175px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-transform: translate3d(0, 0, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 #shower {
@@ -203,6 +213,16 @@ h1, h2, h3, h4, p, span, a {
   height: 125px;
   background-image: url("../roomplans/bathroom/bath.png");
   background-size: 125px 125px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-transform: translate3d(0, 0, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 .sandbox {
@@ -274,8 +294,8 @@ h1, h2, h3, h4, p, span, a {
   background-image: url("../images/menu-bg.png");
   position: absolute;
   left: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  top: 20px;
+  bottom: 20px;
   z-index: 1;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
