--- a/Production/assets/sass/main.sass
+++ b/Production/assets/sass/main.sass
@@ -10,7 +10,7 @@ body, html
 
 p, a, h1
 	-webkit-font-smoothing: antialiased
-	-webkit-transform: translate3d(0, 0, 0)
+	// -webkit-transform: translate3d(0, 0, 0)
 
 a 
 	text-decoration: none
@@ -26,6 +26,14 @@ a
 	#logo 
 		display: inline-block
 		cursor: pointer
+
+	#slogan
+		font-size: 12px
+		line-height: 30px
+		height: 30px
+		font-weight: 300
+		display: block
+
 
 #content
 	width: 100%
@@ -90,13 +98,15 @@ a
 
 	#footer
 		padding-bottom: 50px
-		padding-top: 100px
+		padding-top: 25px
+		margin-top: 75px
+		border-top: 1px solid #ccc
 
 		#copyright
 			float: left
 
 			p 
-				font-size: 14px
+				font-size: 12px
 				color: #999
 
 		#social
@@ -117,8 +127,11 @@ a
 					background-position: -25px 0px
 					margin-left: 5px
 
+				span 
+					display: none
+
 			p 
-				font-size: 14px
+				font-size: 12px
 				display: block
 				float: left
 				line-height: 25px
