--- a/Production/editor/assets/sass/main.sass
+++ b/Production/editor/assets/sass/main.sass
@@ -68,30 +68,30 @@ h1, h2, h3, h4, p, span, a
 
 // Bedroom
 #bedroom-master
-	width: 250px
-	height: 175px
+	min-width: 250px
+	min-height: 175px
 	background-image: url("../roomplans/bedroom/master.png")
 	background-size: 250px 175px
 	@include room
 
 #bedroom-small
-	width: 150px
-	height: 175px
+	min-width: 150px
+	min-height: 175px
 	background-image: url("../roomplans/bedroom/small.png")
 	background-size: 150px 175px
 	@include room
 
 // Bath
 #shower
-	width: 175px
-	height: 75px
+	min-width: 175px
+	min-height: 75px
 	background-image: url("../roomplans/bathroom/shower.png")
 	background-size: 175px 75px
 	@include room
 
 #bath
-	width: 125px
-	height: 125px
+	min-width: 125px
+	min-height: 125px
 	background-image: url("../roomplans/bathroom/bath.png")
 	background-size: 125px 125px
 	@include room
