--- a/Production/assets/css/main.css
+++ b/Production/assets/css/main.css
@@ -170,9 +170,25 @@ a {
 #content #footer #copyright {
   float: left;
 }
-#content #footer #copyright p {
+#content #footer #copyright p, #content #footer #copyright a {
   font-size: 12px;
   color: #999999;
+  display: block;
+  float: left;
+}
+#content #footer #copyright a {
+  margin-left: 20px;
+  -webkit-transition-property: color;
+  -moz-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+#content #footer #copyright a:hover {
+  color: #175c4d;
 }
 #content #footer #social {
   float: right;
@@ -208,6 +224,7 @@ a {
   display: table;
   width: 100%;
   height: 100%;
+  background-image: url(../images/mood.png);
 }
 
 .table-cell {
