--- a/Production/editor/assets/css/main.css
+++ b/Production/editor/assets/css/main.css
@@ -302,6 +302,12 @@ h1, h2, h3, h4, p, span, a {
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .Menu #logo {
   display: block;
