--- a/Production/editor/assets/sass/main.sass
+++ b/Production/editor/assets/sass/main.sass
@@ -154,6 +154,12 @@ h1, h2, h3, h4, p, span, a
 	bottom: 20px
 	z-index: 1
 	@include border-radius(4px)
+	-webkit-touch-callout: none
+	-webkit-user-select: none
+	-khtml-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	user-select: none
 
 	#logo 
 		display: block
