--- a/Production/assets/css/main.css
+++ b/Production/assets/css/main.css
@@ -64,6 +64,7 @@ body, html {
 
 p, a, h1 {
   -webkit-font-smoothing: antialiased;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 a {
@@ -237,4 +238,9 @@ a {
 .wrapper {
   max-width: 960px;
   margin: auto;
+}
+@media only screen and (min-width: 481px) and (max-width: 1023px) {
+  .wrapper {
+    padding: 5%;
+  }
 }
