--- a/Production/editor/assets/sass/main.sass
+++ b/Production/editor/assets/sass/main.sass
@@ -148,6 +148,11 @@ h1, h2, h3, h4, p, span, a
 				@include opacity(1)
 				background-image: url("../images/trans.png")
 
+		&.touchhove
+			.info 
+				@include opacity(1)
+				background-image: url("../images/trans.png")
+
 .Menu
 	width: 259px
 	background-image: url("../images/menu-bg.png")
