--- a/Production/editor/assets/sass/main.sass
+++ b/Production/editor/assets/sass/main.sass
@@ -148,7 +148,7 @@ h1, h2, h3, h4, p, span, a
 				@include opacity(1)
 				background-image: url("../images/trans.png")
 
-		&.touchhove
+		&.touchhover
 			.info 
 				@include opacity(1)
 				background-image: url("../images/trans.png")
