--- a/Production/editor/assets/css/main.css
+++ b/Production/editor/assets/css/main.css
@@ -291,7 +291,7 @@ h1, h2, h3, h4, p, span, a {
   opacity: 1;
   background-image: url("../images/trans.png");
 }
-.sandbox .drag.touchhove .info {
+.sandbox .drag.touchhover .info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
   background-image: url("../images/trans.png");
